@@ -1,2 +1,2 @@
-DIST enlightenment-0.18.7.tar.bz2 27613518 SHA256 90fc71cd7eda1bf4e7cf4fa6ed4d578ce01f5d8c66e21f1d1a2ffbc843f36b13 SHA512 f06479e3c6da31f9457525247f1654ed10e192073f1e9fa9d07f5d8158f6463871960776c320bb5cc3676cdfb3188e4b0c5435c438051a2bfd9f3b2c8f73befd WHIRLPOOL b1b6323b047d330789b079dad45826269d878890b56b763b7a2b4a10dff1adecbeb062ba7cb795ff0f415d06f8da3c5b11a64dfaeb98fb8ac48d77e79b2d1391
 DIST enlightenment-0.19.0-rc3.tar.bz2 26181562 SHA256 bc11189bdcb285886684f1a23c91aa7eb06d8e4e3ed19d1e4041074ff8fc47cc SHA512 0da7984120365eba81baeca7e9843ee0c132cd63ae5678d1977dca9459566639daa467288476e19703d6706a6f1fd033f42da54888f6a22c2388f86ab96c8eba WHIRLPOOL 72f4bcf510c1ad89263d5b4f9578ccac7c70096366cda7d805491ced800d296e8b28f743e623730dad020e4b9db9b7c680206e9bc3289d5f6d8f7bb1035e6669
+DIST enlightenment-0.19.0.tar.gz 28417084 SHA256 30a5633be43a9bb33ce397afe0870511e7b148ea9c1f1a8536818354c20f2e31 SHA512 0d0235fc02863e4ea664a5e2c3537b7089826ace81ed3aaec17f1dc49f9fdd73e87d6c957c613bd4cdabe6b3988909139ab5caecbfbd81cf4430912371d9b133 WHIRLPOOL cd80d66a03768e603b20dad2de9dcb07d99ab9f133b8bf9e2ab0e19ee43e7eff2feb41046126b4b78175fed613619e1db13f72d3a1ec0b6e0819f9e5135bbc96
